--- a/.golangci.yml
+++ b/.golangci.yml
@@ -62,6 +62,7 @@ linters-settings:
           - github.com/sirupsen/logrus
           - github.com/stretchr/testify
           - github.com/google/generative-ai-go
+          - github.com/google/uuid
 
   revive:
     rules:
