--- a/docs/package.json
+++ b/docs/package.json
@@ -11,12 +11,12 @@
     "deploy:local": "../scripts/deploy-local.sh"
   },
   "devDependencies": {
-    "vitepress": "^1.0.0"
+    "vitepress": "^0.1.1"
   },
   "type": "module",
   "dependencies": {
     "@algolia/client-search": "^5.33.0",
     "local-search": "^1.1.2",
-    "vitepress-plugin-search": "^1.0.4-alpha.22"
+    "vitepress-plugin-search": "^0.0.3"
   }
 }
