feat(security): implement comprehensive security constraints and validation
- Add security manager to coordinate all security components
- Implement request/response validation with pattern matching
- Add data sanitizer for removing sensitive information
- Implement security auditor for comprehensive audit logging
- Add IP-based and token bucket rate limiters
- Create security middleware for Gin framework
- Support multiple security levels (none, basic, strict, paranoid)
- Add API key management with rotation support
- Implement IP whitelisting/blacklisting
- Add CSRF, CORS, and security headers middleware
- Fix all module imports to use correct github.com/orchestre-dev/ccproxy path
- Remove old coverage files with incorrect imports

--- a/.gitignore
+++ b/.gitignore
@@ -9,8 +9,14 @@ node_modules/
 build/
 dist/
 coverage/
-tmp/
+.tmp/
 temp/
+tmp/
+build/
+builds/
+builds/
+builds/
+.temp/
 logs/
 *.log
 .DS_Store
