fix: update tj-actions/changed-files to v46 to fix security issue
- Updated from invalid v44 commit hash to proper v46 version tag
- Addresses security vulnerability in tj-actions/changed-files
- Uses version tags as requested instead of commit hashes

--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -63,7 +63,7 @@ jobs:
 
     - name: Check for source code changes
       id: check_source_changes
-      uses: tj-actions/changed-files@e25e1768529381e31260a5e006f7b342068f8736 # v44
+      uses: tj-actions/changed-files@v46
       with:
         files: |
           **/*.go
