--- a/.github/workflows/changelog.yml
+++ b/.github/workflows/changelog.yml
@@ -43,7 +43,7 @@ jobs:
         
     - name: Get changed files
       id: changed-files
-      uses: tj-actions/changed-files@e25e1768529381e31260a5e006f7b342068f8736 # v44
+      uses: tj-actions/changed-files@v46
       with:
         files: |
           **/*.go
@@ -54,7 +54,7 @@ jobs:
     
     - name: Check for source code changes
       id: source-changes
-      uses: tj-actions/changed-files@e25e1768529381e31260a5e006f7b342068f8736 # v44
+      uses: tj-actions/changed-files@v46
       with:
         files: |
           **/*.go
